--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
 
     <!--Who am I-->
-    <div class="container">
+    <div class="container" id="about">
       <div class="row">
         <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
           <img src="img/my-avatar.jpg" class="img-responsive center-block" alt="">
